fix global body overflow and scrolling issues

--- a/css/global.css
+++ b/css/global.css
@@ -8,13 +8,12 @@
 
 html, body {
     overscroll-behavior-y: none;
+    width: 100vw;
     overflow-x: hidden;
 }
 
 body {
     position: relative;
-    width: 100vw;
-    overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
     background-color: black;
     color: white;
